<?xml version="1.0"?>
<package>
  <name>pursue_controller_node</name>
  <version>0.0.0</version>
  <description>none</description>
 <maintainer email="soldo@chalmers.se">Matteo Soldo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>


</package>
